--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {},
+  "dependencies": {
+    "ejs": "^2.3.1",
+    "express": "^4.9.8",
+    "path": "^0.12.7"
+  },
   "postinstall": "npm run build",
   "start": "node server.js"
 }
